[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-fht"
version = "0.1.0"
description = "Optimal allocation framework for long-short cryptocurrency positions on DeFi lending platforms using spectrally negative Lévy processes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "crypto-fht contributors" }
]
keywords = [
    "defi",
    "cryptocurrency",
    "portfolio-optimization",
    "risk-management",
    "levy-processes",
    "first-hitting-time",
    "aave",
    "cvar"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "cvxpy>=1.4",
    "mpmath>=1.3",
    "aiohttp>=3.9",
    "pandas>=2.0",
    "plotly>=5.18",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "mypy>=1.8",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/Tdi240/crypto-fht-portfolio"
Repository = "https://github.com/Tdi240/crypto-fht-portfolio"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_fht"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]
